[metadata]
name = solar_edge
version = 1.0
author = AxReds
author_email = alessior@live.com
description = A package for working with SolarEdge API
long_description = file: README_SE_Functions.md
long_description_content_type = text/markdown
url = https://github.com/AxReds/PVOut.org
license = GNU GENERAL PUBLIC LICENSE V3.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    requests
    pandas
    numpy
python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*
