[metadata]
name = solaredge_exporter
version = '0.0.1'
author = AxReds
author_email = alessior@live.com
description = A package for exporting your data from the SolarEdge monitoring dashboard through SolarEdge APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AxReds/solaredge
license = GNU GENERAL PUBLIC LICENSE V3.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests

python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*
    *.csv
    main.py
